--- a/po/da.po
+++ b/po/da.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-01 09:48+0000\n"
+"POT-Creation-Date: 2021-02-17 20:18+0100\n"
 "PO-Revision-Date: 2017-01-18 16:38+0100\n"
 "Last-Translator: lupine <a_ecklon@hotmail.com>\n"
 "Language-Team: \n"
@@ -4456,11 +4456,6 @@ msgstr "G"
 
 #
 #, fuzzy
-msgid "GStreamer version: "
-msgstr "Kernel version:"
-
-#
-#, fuzzy
 msgid "GUI Settings"
 msgstr "Indstillings menu"
 
@@ -5186,6 +5181,9 @@ msgstr "Intern flash"
 msgid "Internal hdd only"
 msgstr "Kun intern harddisk"
 
+msgid "Internet (ntp)"
+msgstr ""
+
 msgid "Interval between keys when repeating:"
 msgstr "Interval mellem trykgentagelse"
 
@@ -5748,6 +5746,14 @@ msgid "Media player"
 msgstr "Medie afspiller"
 
 #
+#, fuzzy
+msgid "Media player: GStreamer, version "
+msgstr "Kernel version:"
+
+msgid "Media player: ffmpeg, version "
+msgstr ""
+
+#
 msgid "Media scanner"
 msgstr "Mediescanner"
 
@@ -6068,6 +6074,9 @@ msgstr "NEJ"
 #
 msgid "NOW"
 msgstr "NU"
+
+msgid "NTP Hostname"
+msgstr ""
 
 #
 msgid "NTSC"
@@ -6430,10 +6439,6 @@ msgstr "Norsk"
 #, fuzzy
 msgid "Not Installed"
 msgstr "Installer"
-
-#, fuzzy
-msgid "Not Required"
-msgstr "Ikke defineret"
 
 msgid "Not associated"
 msgstr "Ikke tilknyttet"
@@ -8601,6 +8606,9 @@ msgstr ""
 msgid "Select how the satellite dish is set up. i.e. fixed dish, single LNB, DiSEqC switch, positioner, etc."
 msgstr ""
 
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr ""
+
 msgid "Select input device"
 msgstr "Vælg enhed"
 
@@ -10314,6 +10322,9 @@ msgstr ""
 msgid "The following files were found..."
 msgstr "Følgende filer fandtes..."
 
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr ""
+
 #
 msgid ""
 "The network wizard extension is not installed!\n"
@@ -10468,6 +10479,12 @@ msgstr "Denne DVD RW er allerede formatteret - reformattering vil slette alt ind
 
 #, python-format
 msgid "This field allows you to search an additional symbol rate up to %s."
+msgstr ""
+
+msgid ""
+"This image is intended for developers and testers.\n"
+"No support will be provided!\n"
+"Do you understand this?"
 msgstr ""
 
 msgid ""
@@ -10738,6 +10755,9 @@ msgstr "Tid"
 msgid "Time scale"
 msgstr "Tidsskala"
 
+msgid "Time synchronization method"
+msgstr ""
+
 #
 #, fuzzy
 msgid "Time zone"
@@ -10953,6 +10973,11 @@ msgstr "Transmissions type"
 
 #
 msgid "Transponder"
+msgstr "Transponder"
+
+#
+#, fuzzy
+msgid "Transponder Time"
 msgstr "Transponder"
 
 #
