--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-03 13:26+0100\n"
+"POT-Creation-Date: 2021-02-17 20:18+0100\n"
 "PO-Revision-Date: 2020-11-30 18:00+0100\n"
 "Last-Translator: Jose Juan <jzapater@gmail.com>\n"
 "Language-Team: ANGELODOS  angelo2807@hotmail.com\n"
@@ -4351,9 +4351,6 @@ msgstr "Otras opciones"
 msgid "G"
 msgstr "G"
 
-msgid "GStreamer version: "
-msgstr "Versión GStreamer:"
-
 #
 msgid "GUI Settings"
 msgstr "Configuración de GUI"
@@ -5062,6 +5059,9 @@ msgstr "Flash interno"
 msgid "Internal hdd only"
 msgstr "Sólo hdd interno"
 
+msgid "Internet (ntp)"
+msgstr ""
+
 msgid "Interval between keys when repeating:"
 msgstr "Intervalo entre teclas al repetir:"
 
@@ -5604,6 +5604,13 @@ msgstr "Mayotte"
 msgid "Media player"
 msgstr "Reproductor"
 
+#, fuzzy
+msgid "Media player: GStreamer, version "
+msgstr "Versión GStreamer:"
+
+msgid "Media player: ffmpeg, version "
+msgstr ""
+
 #
 msgid "Media scanner"
 msgstr "Escáner de medios"
@@ -5909,6 +5916,9 @@ msgstr "NO"
 #
 msgid "NOW"
 msgstr "AHORA"
+
+msgid "NTP Hostname"
+msgstr ""
 
 #
 msgid "NTSC"
@@ -6261,9 +6271,6 @@ msgstr "Noruego"
 #
 msgid "Not Installed"
 msgstr "No instalado"
-
-msgid "Not Required"
-msgstr "No requerido"
 
 msgid "Not associated"
 msgstr "No asociado"
@@ -8353,6 +8360,9 @@ msgstr "Seleccione qué tan rápido debe moverse el plato entre los satélites."
 msgid "Select how the satellite dish is set up. i.e. fixed dish, single LNB, DiSEqC switch, positioner, etc."
 msgstr "Seleccione cómo se configura la antena parabólica. es decir, plato fijo, LNB único, interruptor DiSEqC, posicionador, etc."
 
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr ""
+
 msgid "Select input device"
 msgstr "Seleccione dispositivo de entrada"
 
@@ -10009,6 +10019,9 @@ msgstr ""
 msgid "The following files were found..."
 msgstr "Los siguientes ficheros fueron encontrados..."
 
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr ""
+
 msgid ""
 "The network wizard extension is not installed!\n"
 "Please install it."
@@ -10172,6 +10185,12 @@ msgstr "El disco DVD-RW está ya formateado - reformatear borrará todos los con
 #, python-format
 msgid "This field allows you to search an additional symbol rate up to %s."
 msgstr "Este campo le permite buscar una tasa de símbolo adicional hasta% s."
+
+msgid ""
+"This image is intended for developers and testers.\n"
+"No support will be provided!\n"
+"Do you understand this?"
+msgstr ""
 
 msgid ""
 "This info is for developers only.\n"
@@ -10420,6 +10439,9 @@ msgstr "Hora"
 msgid "Time scale"
 msgstr "Escala de tiempo"
 
+msgid "Time synchronization method"
+msgstr ""
+
 #
 msgid "Time zone"
 msgstr "Zona horaria"
@@ -10631,6 +10653,11 @@ msgstr "Modo de trasmisión"
 
 #
 msgid "Transponder"
+msgstr "Transponder"
+
+#
+#, fuzzy
+msgid "Transponder Time"
 msgstr "Transponder"
 
 msgid "Transport Stream Type"
