--- a/po/fi.po
+++ b/po/fi.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-01 09:56+0000\n"
+"POT-Creation-Date: 2021-02-17 20:18+0100\n"
 "PO-Revision-Date: 2020-05-16 18:41+0200\n"
 "Last-Translator: jamu\n"
 "Language-Team: BoxFreak/jamu\n"
@@ -4335,9 +4335,6 @@ msgstr ""
 msgid "G"
 msgstr ""
 
-msgid "GStreamer version: "
-msgstr "GStreamer versio:"
-
 #
 msgid "GUI Settings"
 msgstr "Käyttöliittymän asetukset"
@@ -5055,6 +5052,9 @@ msgstr "Sisäinen flash-muisti"
 msgid "Internal hdd only"
 msgstr "Vain sisäinen kiintolevy"
 
+msgid "Internet (ntp)"
+msgstr ""
+
 msgid "Interval between keys when repeating:"
 msgstr "Viive näppäimen toiston välissä:"
 
@@ -5607,6 +5607,13 @@ msgstr "Mayotte"
 msgid "Media player"
 msgstr "Mediasoitin"
 
+#, fuzzy
+msgid "Media player: GStreamer, version "
+msgstr "GStreamer versio:"
+
+msgid "Media player: ffmpeg, version "
+msgstr ""
+
 msgid "Media scanner"
 msgstr "Mediaskanneri"
 
@@ -5926,6 +5933,9 @@ msgstr "EI"
 #
 msgid "NOW"
 msgstr "NYT"
+
+msgid "NTP Hostname"
+msgstr ""
 
 #
 msgid "NTSC"
@@ -6286,11 +6296,6 @@ msgstr "Norja"
 #, fuzzy
 msgid "Not Installed"
 msgstr "Asenna"
-
-#
-#, fuzzy
-msgid "Not Required"
-msgstr "Ei määritetty"
 
 msgid "Not associated"
 msgstr "Ei assosioitu"
@@ -8412,6 +8417,9 @@ msgstr ""
 msgid "Select how the satellite dish is set up. i.e. fixed dish, single LNB, DiSEqC switch, positioner, etc."
 msgstr ""
 
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr ""
+
 msgid "Select input device"
 msgstr "Valitse syöttölaite"
 
@@ -10112,6 +10120,9 @@ msgstr ""
 msgid "The following files were found..."
 msgstr "Seuraavat tiedostot löytyi..."
 
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr ""
+
 msgid ""
 "The network wizard extension is not installed!\n"
 "Please install it."
@@ -10266,6 +10277,12 @@ msgstr "Tämä DVD-RW levy on jo alustettu - uudelleenalustus tuhoaa levyn kaike
 
 #, python-format
 msgid "This field allows you to search an additional symbol rate up to %s."
+msgstr ""
+
+msgid ""
+"This image is intended for developers and testers.\n"
+"No support will be provided!\n"
+"Do you understand this?"
 msgstr ""
 
 msgid ""
@@ -10513,6 +10530,9 @@ msgstr "Aika-asetukset"
 msgid "Time scale"
 msgstr "Aika-asteikko"
 
+msgid "Time synchronization method"
+msgstr ""
+
 #
 #, fuzzy
 msgid "Time zone"
@@ -10725,6 +10745,11 @@ msgstr "Lähetystapa"
 
 #
 msgid "Transponder"
+msgstr "Lähetin"
+
+#
+#, fuzzy
+msgid "Transponder Time"
 msgstr "Lähetin"
 
 msgid "Transport Stream Type"
