--- a/po/fr.po
+++ b/po/fr.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-01 09:56+0000\n"
-"PO-Revision-Date: 2020-12-14 23:22+0100\n"
+"POT-Creation-Date: 2021-02-17 20:18+0100\n"
+"PO-Revision-Date: 2021-02-17 20:28+0100\n"
 "Last-Translator: Pr2\n"
 "Language-Team: french\n"
 "Language: fr\n"
@@ -3910,9 +3910,6 @@ msgstr "Options supplémentaires"
 msgid "G"
 msgstr "G"
 
-msgid "GStreamer version: "
-msgstr "Version de GStreamer: "
-
 msgid "GUI Settings"
 msgstr "Paramètres de l’IGU"
 
@@ -4556,6 +4553,9 @@ msgstr "Flash interne"
 msgid "Internal hdd only"
 msgstr "Disque dur interne seulement"
 
+msgid "Internet (ntp)"
+msgstr "Internet (ntp)"
+
 msgid "Interval between keys when repeating:"
 msgstr "Intervalle entre les touches lors des répétitions:"
 
@@ -5034,7 +5034,13 @@ msgid "Mayotte"
 msgstr "Mayotte"
 
 msgid "Media player"
-msgstr "Lecteur de médias"
+msgstr "Lecteur multimédia"
+
+msgid "Media player: GStreamer, version "
+msgstr "Lecteur multimédia: GStreamer, version "
+
+msgid "Media player: ffmpeg, version "
+msgstr "Lecteur multimédia: ffmpeg, version "
 
 msgid "Media scanner"
 msgstr "Media scanner"
@@ -5303,6 +5309,9 @@ msgstr "NON"
 
 msgid "NOW"
 msgstr "MAINTENANT"
+
+msgid "NTP Hostname"
+msgstr "Nom d’hôte NTP"
 
 msgid "NTSC"
 msgstr "NTSC"
@@ -5607,9 +5616,6 @@ msgstr "Norvégien"
 
 msgid "Not Installed"
 msgstr "Non installé"
-
-msgid "Not Required"
-msgstr "Non requis"
 
 msgid "Not associated"
 msgstr "Non-Associé"
@@ -7451,6 +7457,9 @@ msgstr "Sélectionnez à quelle vitesse l’antenne doit se déplacer entre les 
 msgid "Select how the satellite dish is set up. i.e. fixed dish, single LNB, DiSEqC switch, positioner, etc."
 msgstr "Sélectionnez la configuration de votre antenne satellite p.e. antenne fixe, LNB seul, commutateur DiSEqC, positionneur, etc."
 
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr "Sélectionnez comment vous souhaitez que votre récepteur conserve le temps exact, soit à partir du transpondeur DVB, soit à partir d’Internet en utilisant NTP. Ou utilisez Auto, qui favorisera l’utilisation de NTP, mais retombera sur le temps du transpondeur lorsqu’aucune connexion Internet n’est disponible."
+
 msgid "Select input device"
 msgstr "Sélectionner le périphérique entrée"
 
@@ -8825,7 +8834,7 @@ msgstr ""
 "\n"
 "Traducteur: Pr2\n"
 "Support: www.openpli.org\n"
-"Dernière MAJ: 14-12-2020"
+"Dernière MAJ: 17-02-2021"
 
 msgid "TS file is too large for ISO9660 level 1!"
 msgstr "Fichier TS trop grand pour le niveau 1 ISO9660!"
@@ -8953,6 +8962,9 @@ msgstr ""
 
 msgid "The following files were found..."
 msgstr "Les fichiers suivant ont été trouvés..."
+
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr "Le nom d’hôte ou l’adresse IP du serveur NTP pour synchroniser l’heure depuis."
 
 msgid ""
 "The network wizard extension is not installed!\n"
@@ -9100,6 +9112,15 @@ msgstr "Ce support DVD RW est déjà formaté - le reformater effacera tout le c
 #, python-format
 msgid "This field allows you to search an additional symbol rate up to %s."
 msgstr "Ce champ vous permet de chercher un taux de symbole additionnel de %s."
+
+msgid ""
+"This image is intended for developers and testers.\n"
+"No support will be provided!\n"
+"Do you understand this?"
+msgstr ""
+"Cette image est destinée aux développeurs et testeurs.\n"
+"Aucun support ne sera fourni!\n"
+"Comprenez-vous cela?"
 
 msgid ""
 "This info is for developers only.\n"
@@ -9331,6 +9352,9 @@ msgstr "Heure"
 msgid "Time scale"
 msgstr "Echelle de temps"
 
+msgid "Time synchronization method"
+msgstr "Méthode de synchronisation du temps"
+
 msgid "Time zone"
 msgstr "Fuseau horaire"
 
@@ -9511,6 +9535,9 @@ msgstr "Mode de transmission"
 
 msgid "Transponder"
 msgstr "Transpondeur"
+
+msgid "Transponder Time"
+msgstr "Heure du Transpondeur"
 
 msgid "Transport Stream Type"
 msgstr "Type de flux de transport"
