--- a/po/id.po
+++ b/po/id.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-01 09:56+0000\n"
+"POT-Creation-Date: 2021-02-17 20:18+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Budiarno Pedode\n"
 "Language-Team: \n"
@@ -4020,10 +4020,6 @@ msgid "G"
 msgstr "G"
 
 #, fuzzy
-msgid "GStreamer version: "
-msgstr "Versi Gstreamer: "
-
-#, fuzzy
 msgid "GUI Settings"
 msgstr "Penyetelan GUI"
 
@@ -4691,6 +4687,9 @@ msgstr "Flash memori internal"
 msgid "Internal hdd only"
 msgstr "Hdd internal saja"
 
+msgid "Internet (ntp)"
+msgstr ""
+
 msgid "Interval between keys when repeating:"
 msgstr "Selang waktu antara tombol ketika berulang:"
 
@@ -5183,6 +5182,13 @@ msgstr ""
 msgid "Media player"
 msgstr "Pemutar media"
 
+#, fuzzy
+msgid "Media player: GStreamer, version "
+msgstr "Versi Gstreamer: "
+
+msgid "Media player: ffmpeg, version "
+msgstr ""
+
 msgid "Media scanner"
 msgstr "Pemindai media"
 
@@ -5469,6 +5475,9 @@ msgstr "TIDAK"
 
 msgid "NOW"
 msgstr "Sekarang"
+
+msgid "NTP Hostname"
+msgstr ""
 
 msgid "NTSC"
 msgstr "NTSC"
@@ -5780,10 +5789,6 @@ msgstr "Norwegia"
 #, fuzzy
 msgid "Not Installed"
 msgstr "Pasang"
-
-#, fuzzy
-msgid "Not Required"
-msgstr "Tak ditetapkan"
 
 msgid "Not associated"
 msgstr "Tak diasosiasikan"
@@ -7673,6 +7678,9 @@ msgstr "Pilih seberapa cepat parabola bergerak antara satelit."
 msgid "Select how the satellite dish is set up. i.e. fixed dish, single LNB, DiSEqC switch, positioner, etc."
 msgstr "Pilih bagaimana parabola disetel, yaitu parabola tetap, LNB tunggal, saklar DiSEqC, posisioner, dlsb."
 
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr ""
+
 msgid "Select input device"
 msgstr "Pilih perangkat input"
 
@@ -9213,6 +9221,9 @@ msgstr ""
 msgid "The following files were found..."
 msgstr "Ditemukan berkas berikut..."
 
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr ""
+
 msgid ""
 "The network wizard extension is not installed!\n"
 "Please install it."
@@ -9362,6 +9373,12 @@ msgstr "Media DVD RW ini sudah diformat - memformat ulang akan menghapus semua i
 #, python-format
 msgid "This field allows you to search an additional symbol rate up to %s."
 msgstr "Bidang ini memungkinkan anda mencari symbol rate tambahan sampai %s"
+
+msgid ""
+"This image is intended for developers and testers.\n"
+"No support will be provided!\n"
+"Do you understand this?"
+msgstr ""
 
 msgid ""
 "This info is for developers only.\n"
@@ -9596,6 +9613,9 @@ msgstr "Waktu"
 msgid "Time scale"
 msgstr "Rentang waktu"
 
+msgid "Time synchronization method"
+msgstr ""
+
 #, fuzzy
 msgid "Time zone"
 msgstr "Zona Waktu"
@@ -9780,6 +9800,10 @@ msgid "Transmission mode"
 msgstr "Mode transmisi"
 
 msgid "Transponder"
+msgstr "Transponder"
+
+#, fuzzy
+msgid "Transponder Time"
 msgstr "Transponder"
 
 #, fuzzy
