--- a/po/it.po
+++ b/po/it.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLi-enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-01 09:56+0000\n"
+"POT-Creation-Date: 2021-02-17 20:18+0100\n"
 "PO-Revision-Date: 2020-05-16 18:46+0200\n"
 "Last-Translator: Gringo <openpli@tiscali.it>\n"
 "Language-Team: www.linsat.net <spaeleus@croci.org>\n"
@@ -3929,9 +3929,6 @@ msgstr "Ulteriori opzioni"
 msgid "G"
 msgstr "G"
 
-msgid "GStreamer version: "
-msgstr "Versione GStreamer: "
-
 msgid "GUI Settings"
 msgstr "Impostazioni"
 
@@ -4584,6 +4581,9 @@ msgstr "Flash interna"
 msgid "Internal hdd only"
 msgstr "Solo disco rigido interno"
 
+msgid "Internet (ntp)"
+msgstr ""
+
 msgid "Interval between keys when repeating:"
 msgstr "Intervallo tra i tasti durante la ripetizione:"
 
@@ -5062,6 +5062,13 @@ msgstr "Mayotte"
 msgid "Media player"
 msgstr "Lettore multimediale"
 
+#, fuzzy
+msgid "Media player: GStreamer, version "
+msgstr "Versione GStreamer: "
+
+msgid "Media player: ffmpeg, version "
+msgstr ""
+
 msgid "Media scanner"
 msgstr "Ricerca multimediale"
 
@@ -5342,6 +5349,9 @@ msgstr "NO"
 
 msgid "NOW"
 msgstr "IN ONDA"
+
+msgid "NTP Hostname"
+msgstr ""
 
 msgid "NTSC"
 msgstr "NTSC"
@@ -5646,9 +5656,6 @@ msgstr "Norvegese"
 
 msgid "Not Installed"
 msgstr "Non Installato"
-
-msgid "Not Required"
-msgstr "Non Richiesto"
 
 msgid "Not associated"
 msgstr "Non associato"
@@ -7497,6 +7504,9 @@ msgstr "Selezionare la velocità con la quale la parabola si sposta tra i satell
 msgid "Select how the satellite dish is set up. i.e. fixed dish, single LNB, DiSEqC switch, positioner, etc."
 msgstr "Selezionare come è fatto l'impianto satellitare, ad es. parabola fissa, LNB singolo, switch DiSEqC, motore, ecc."
 
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr ""
+
 msgid "Select input device"
 msgstr "Selezionare la periferica di ingresso"
 
@@ -9006,6 +9016,9 @@ msgstr ""
 msgid "The following files were found..."
 msgstr "Trovati i seguenti file..."
 
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr ""
+
 msgid ""
 "The network wizard extension is not installed!\n"
 "Please install it."
@@ -9152,6 +9165,12 @@ msgstr "Il DVD-RW è già formattato - una nuova formattazione cancellerà tutto
 #, python-format
 msgid "This field allows you to search an additional symbol rate up to %s."
 msgstr "Questo campo consente di ricercare dei symbol rate aggiuntivi fino a %s."
+
+msgid ""
+"This image is intended for developers and testers.\n"
+"No support will be provided!\n"
+"Do you understand this?"
+msgstr ""
 
 msgid ""
 "This info is for developers only.\n"
@@ -9384,6 +9403,9 @@ msgstr "Orario"
 msgid "Time scale"
 msgstr "Scala del tempo"
 
+msgid "Time synchronization method"
+msgstr ""
+
 #, fuzzy
 msgid "Time zone"
 msgstr "Fuso orario"
@@ -9568,6 +9590,10 @@ msgid "Transmission mode"
 msgstr "Modalità di trasmissione"
 
 msgid "Transponder"
+msgstr "Transponder"
+
+#, fuzzy
+msgid "Transponder Time"
 msgstr "Transponder"
 
 msgid "Transport Stream Type"
