--- a/po/pl.po
+++ b/po/pl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-01 09:56+0000\n"
+"POT-Creation-Date: 2021-02-17 20:18+0100\n"
 "PO-Revision-Date: 2020-12-02 19:26+0100\n"
 "Last-Translator: blzr <blzr@o2.pl>\n"
 "Language-Team: \n"
@@ -3922,9 +3922,6 @@ msgstr "Opcje dodatkowe"
 msgid "G"
 msgstr ""
 
-msgid "GStreamer version: "
-msgstr "Wersja gstreamera: "
-
 msgid "GUI Settings"
 msgstr "Ustawienia interfejsu użytkownika"
 
@@ -4571,6 +4568,9 @@ msgstr "Wewnętrzny flash"
 msgid "Internal hdd only"
 msgstr "Tylko wewnętrzny hdd"
 
+msgid "Internet (ntp)"
+msgstr ""
+
 msgid "Interval between keys when repeating:"
 msgstr "Interwał pomiędzy klawiszami przy powtarzaniu:"
 
@@ -5052,6 +5052,13 @@ msgstr ""
 msgid "Media player"
 msgstr "Odtwarzacz"
 
+#, fuzzy
+msgid "Media player: GStreamer, version "
+msgstr "Wersja gstreamera: "
+
+msgid "Media player: ffmpeg, version "
+msgstr ""
+
 msgid "Media scanner"
 msgstr ""
 
@@ -5319,6 +5326,9 @@ msgstr "Nie"
 
 msgid "NOW"
 msgstr "Teraz"
+
+msgid "NTP Hostname"
+msgstr ""
 
 msgid "NTSC"
 msgstr ""
@@ -5623,9 +5633,6 @@ msgstr "Norweski"
 
 msgid "Not Installed"
 msgstr "Niezainstalowany"
-
-msgid "Not Required"
-msgstr "Niewymagany"
 
 msgid "Not associated"
 msgstr "Nie powiązane"
@@ -7470,6 +7477,9 @@ msgstr "Wybierz jak szybko antena powinna poruszać się pomiędzy satelitami."
 msgid "Select how the satellite dish is set up. i.e. fixed dish, single LNB, DiSEqC switch, positioner, etc."
 msgstr "Wybierz ustawienia systemu antenowego, np. stała antena, pojedynczy LNB, przełącznik DiSEqC, obrotnica, itd."
 
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr ""
+
 msgid "Select input device"
 msgstr "Wybierz urządzenie wejścia"
 
@@ -8967,6 +8977,9 @@ msgstr ""
 msgid "The following files were found..."
 msgstr "Następujące pliki zostały znalezione..."
 
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr ""
+
 msgid ""
 "The network wizard extension is not installed!\n"
 "Please install it."
@@ -9113,6 +9126,12 @@ msgstr "Nosnik DVD RW jest już sformatowany - jego  ponowny format spowoduje ut
 #, python-format
 msgid "This field allows you to search an additional symbol rate up to %s."
 msgstr "To pole pozwala wyszukać dodatkowy symbol rate, do %s."
+
+msgid ""
+"This image is intended for developers and testers.\n"
+"No support will be provided!\n"
+"Do you understand this?"
+msgstr ""
 
 msgid ""
 "This info is for developers only.\n"
@@ -9344,6 +9363,9 @@ msgstr "Czas"
 msgid "Time scale"
 msgstr "Przedział czasowy"
 
+msgid "Time synchronization method"
+msgstr ""
+
 msgid "Time zone"
 msgstr "Strefa czasowa"
 
@@ -9524,6 +9546,10 @@ msgstr "Tryb transmisji"
 
 msgid "Transponder"
 msgstr ""
+
+#, fuzzy
+msgid "Transponder Time"
+msgstr "Pokaż info transpondera"
 
 msgid "Transport Stream Type"
 msgstr ""
