--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-01 09:56+0000\n"
+"POT-Creation-Date: 2021-02-17 20:18+0100\n"
 "PO-Revision-Date: 2013-10-20 19:13-0300\n"
 "Last-Translator: Diogo <pingflood@gmail.com>\n"
 "Language-Team: Traduzido por Frank Viana <franksrviana@gmail.com>\n"
@@ -3948,10 +3948,6 @@ msgid "G"
 msgstr ""
 
 #, fuzzy
-msgid "GStreamer version: "
-msgstr "Versão do Kernel:"
-
-#, fuzzy
 msgid "GUI Settings"
 msgstr "Configurações"
 
@@ -4609,6 +4605,9 @@ msgstr "Flash interna"
 msgid "Internal hdd only"
 msgstr "Somente disco interno"
 
+msgid "Internet (ntp)"
+msgstr ""
+
 msgid "Interval between keys when repeating:"
 msgstr "Intervalo entre teclas quando repetir:"
 
@@ -5094,6 +5093,13 @@ msgstr ""
 msgid "Media player"
 msgstr "Reprodutor de mídia"
 
+#, fuzzy
+msgid "Media player: GStreamer, version "
+msgstr "Versão do Kernel:"
+
+msgid "Media player: ffmpeg, version "
+msgstr ""
+
 msgid "Media scanner"
 msgstr "Buscar mídia"
 
@@ -5374,6 +5380,9 @@ msgstr ""
 
 msgid "NOW"
 msgstr "Agora"
+
+msgid "NTP Hostname"
+msgstr ""
 
 msgid "NTSC"
 msgstr ""
@@ -5685,9 +5694,6 @@ msgstr "Norueguês"
 #, fuzzy
 msgid "Not Installed"
 msgstr "Instalar"
-
-msgid "Not Required"
-msgstr ""
 
 msgid "Not associated"
 msgstr "Não associado"
@@ -7572,6 +7578,9 @@ msgstr ""
 msgid "Select how the satellite dish is set up. i.e. fixed dish, single LNB, DiSEqC switch, positioner, etc."
 msgstr ""
 
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr ""
+
 msgid "Select input device"
 msgstr "Selecione o dispositivo de entrada"
 
@@ -9104,6 +9113,9 @@ msgstr ""
 msgid "The following files were found..."
 msgstr "Arquivos de mídia encontrados"
 
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr ""
+
 msgid ""
 "The network wizard extension is not installed!\n"
 "Please install it."
@@ -9235,6 +9247,12 @@ msgstr "Este DVD RW já está formatado. Reformatar irá remover todo o conteúd
 
 #, python-format
 msgid "This field allows you to search an additional symbol rate up to %s."
+msgstr ""
+
+msgid ""
+"This image is intended for developers and testers.\n"
+"No support will be provided!\n"
+"Do you understand this?"
 msgstr ""
 
 msgid ""
@@ -9465,6 +9483,9 @@ msgstr "Hora"
 msgid "Time scale"
 msgstr "Escala de tempo"
 
+msgid "Time synchronization method"
+msgstr ""
+
 #, fuzzy
 msgid "Time zone"
 msgstr "Fuso horário"
@@ -9649,6 +9670,10 @@ msgstr "Modo de transmissão"
 
 msgid "Transponder"
 msgstr ""
+
+#, fuzzy
+msgid "Transponder Time"
+msgstr "Informações do transponder"
 
 #, fuzzy
 msgid "Transport Stream Type"
