--- a/po/sl.po
+++ b/po/sl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Project Slovenia\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-01 09:56+0000\n"
+"POT-Creation-Date: 2021-02-17 20:18+0100\n"
 "PO-Revision-Date: 2020-05-16 18:48+0200\n"
 "Last-Translator: Taykun345 <support@satnigmo.com>\n"
 "Language-Team: Satnigmo <support@satnigmo.com>\n"
@@ -4545,10 +4545,6 @@ msgstr ""
 msgid "G"
 msgstr ""
 
-#, fuzzy
-msgid "GStreamer version: "
-msgstr "Verzija jedra: "
-
 #
 #, fuzzy
 msgid "GUI Settings"
@@ -5290,6 +5286,9 @@ msgstr "Notranji pomnilnik"
 msgid "Internal hdd only"
 msgstr "Samo notranji HDD"
 
+msgid "Internet (ntp)"
+msgstr ""
+
 msgid "Interval between keys when repeating:"
 msgstr "Interval med tipkami v primeru ponavljanja:"
 
@@ -5851,6 +5850,13 @@ msgstr ""
 msgid "Media player"
 msgstr "Predvajalnik vsebin"
 
+#, fuzzy
+msgid "Media player: GStreamer, version "
+msgstr "Verzija jedra: "
+
+msgid "Media player: ffmpeg, version "
+msgstr ""
+
 #
 msgid "Media scanner"
 msgstr "Iskalnik datotek"
@@ -6175,6 +6181,9 @@ msgstr ""
 #
 msgid "NOW"
 msgstr "SEDAJ"
+
+msgid "NTP Hostname"
+msgstr ""
 
 #
 msgid "NTSC"
@@ -6538,9 +6547,6 @@ msgstr "Norveško"
 #, fuzzy
 msgid "Not Installed"
 msgstr "Namesti"
-
-msgid "Not Required"
-msgstr ""
 
 msgid "Not associated"
 msgstr "Ni povezano"
@@ -8748,6 +8754,9 @@ msgstr ""
 msgid "Select how the satellite dish is set up. i.e. fixed dish, single LNB, DiSEqC switch, positioner, etc."
 msgstr ""
 
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr ""
+
 #
 msgid "Select input device"
 msgstr "Izberite vhodno napravo"
@@ -10513,6 +10522,9 @@ msgstr ""
 msgid "The following files were found..."
 msgstr "Najdene datoteke:"
 
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr ""
+
 #
 msgid ""
 "The network wizard extension is not installed!\n"
@@ -10657,6 +10669,12 @@ msgstr "DVD RW medij je že formatiran-ponovno formatiranje bo izbrisalo vso vse
 
 #, python-format
 msgid "This field allows you to search an additional symbol rate up to %s."
+msgstr ""
+
+msgid ""
+"This image is intended for developers and testers.\n"
+"No support will be provided!\n"
+"Do you understand this?"
 msgstr ""
 
 msgid ""
@@ -10902,6 +10920,9 @@ msgstr "Čas"
 msgid "Time scale"
 msgstr "Izbira časovnika"
 
+msgid "Time synchronization method"
+msgstr ""
+
 #
 #, fuzzy
 msgid "Time zone"
@@ -11121,6 +11142,11 @@ msgstr "Način posredovanja"
 
 #
 msgid "Transponder"
+msgstr "Transponder"
+
+#
+#, fuzzy
+msgid "Transponder Time"
 msgstr "Transponder"
 
 #
