--- a/po/sr.po
+++ b/po/sr.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-01 09:56+0000\n"
+"POT-Creation-Date: 2021-02-17 20:18+0100\n"
 "PO-Revision-Date: 2011-04-14 00:02+0200\n"
 "Last-Translator: majevica <jovanovic@gmx.ch>\n"
 "Language-Team: veselin & majevica CRNABERZA <jovanovic@gmx.ch>\n"
@@ -4542,11 +4542,6 @@ msgstr ""
 
 #
 #, fuzzy
-msgid "GStreamer version: "
-msgstr "Nova verzija:"
-
-#
-#, fuzzy
 msgid "GUI Settings"
 msgstr "Postavke"
 
@@ -5295,6 +5290,9 @@ msgstr "Interni fleš"
 msgid "Internal hdd only"
 msgstr ""
 
+msgid "Internet (ntp)"
+msgstr ""
+
 msgid "Interval between keys when repeating:"
 msgstr ""
 
@@ -5880,6 +5878,14 @@ msgstr "Medija plejer"
 
 #
 #, fuzzy
+msgid "Media player: GStreamer, version "
+msgstr "Nova verzija:"
+
+msgid "Media player: ffmpeg, version "
+msgstr ""
+
+#
+#, fuzzy
 msgid "Media scanner"
 msgstr "Medija plejer"
 
@@ -6208,6 +6214,9 @@ msgstr ""
 #
 msgid "NOW"
 msgstr "SADA"
+
+msgid "NTP Hostname"
+msgstr ""
 
 #
 msgid "NTSC"
@@ -6580,9 +6589,6 @@ msgstr "Norveški"
 #, fuzzy
 msgid "Not Installed"
 msgstr "Instalisati"
-
-msgid "Not Required"
-msgstr ""
 
 msgid "Not associated"
 msgstr ""
@@ -8797,6 +8803,9 @@ msgstr ""
 msgid "Select how the satellite dish is set up. i.e. fixed dish, single LNB, DiSEqC switch, positioner, etc."
 msgstr ""
 
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr ""
+
 msgid "Select input device"
 msgstr "Izaberi ulazni uređaj"
 
@@ -10578,6 +10587,9 @@ msgstr ""
 msgid "The following files were found..."
 msgstr "Sledeće datoteke su pronađene..."
 
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr ""
+
 #
 #, fuzzy
 msgid ""
@@ -10729,6 +10741,12 @@ msgstr "Ovaj DVD RW medij je već formatiran-ponovno formatiranje će izbrisati 
 
 #, python-format
 msgid "This field allows you to search an additional symbol rate up to %s."
+msgstr ""
+
+msgid ""
+"This image is intended for developers and testers.\n"
+"No support will be provided!\n"
+"Do you understand this?"
 msgstr ""
 
 msgid ""
@@ -10978,6 +10996,9 @@ msgstr "Vreme"
 msgid "Time scale"
 msgstr "Izbor tajmera "
 
+msgid "Time synchronization method"
+msgstr ""
+
 #
 #, fuzzy
 msgid "Time zone"
@@ -11199,6 +11220,11 @@ msgstr "Mod transmisije"
 
 #
 msgid "Transponder"
+msgstr "Transponder"
+
+#
+#, fuzzy
+msgid "Transponder Time"
 msgstr "Transponder"
 
 #
