--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-01 09:56+0000\n"
+"POT-Creation-Date: 2021-02-17 20:18+0100\n"
 "PO-Revision-Date: 2017-03-05 13:24+0100\n"
 "Last-Translator: Magnus Nilsson <mag_nilsson@hotmail.com>\n"
 "Language-Team: \n"
@@ -4440,10 +4440,6 @@ msgstr "Ytterligare alternativ"
 msgid "G"
 msgstr ""
 
-#, fuzzy
-msgid "GStreamer version: "
-msgstr "Kernel Version : "
-
 #
 #, fuzzy
 msgid "GUI Settings"
@@ -5170,6 +5166,9 @@ msgstr "Intern Flash"
 msgid "Internal hdd only"
 msgstr "Endast Intern HDD"
 
+msgid "Internet (ntp)"
+msgstr ""
+
 msgid "Interval between keys when repeating:"
 msgstr "Intervall mellan tangenttryckningar vid upprepning :"
 
@@ -5726,6 +5725,13 @@ msgstr ""
 msgid "Media player"
 msgstr "Mediaspelare"
 
+#, fuzzy
+msgid "Media player: GStreamer, version "
+msgstr "Kernel Version : "
+
+msgid "Media player: ffmpeg, version "
+msgstr ""
+
 #
 msgid "Media scanner"
 msgstr "Mediaspelare"
@@ -6044,6 +6050,9 @@ msgstr "Nej"
 
 msgid "NOW"
 msgstr "NU"
+
+msgid "NTP Hostname"
+msgstr ""
 
 #
 msgid "NTSC"
@@ -6402,10 +6411,6 @@ msgstr "Norska"
 #, fuzzy
 msgid "Not Installed"
 msgstr "Installera"
-
-#, fuzzy
-msgid "Not Required"
-msgstr "Inte definerad"
 
 msgid "Not associated"
 msgstr "Ej associerad"
@@ -8560,6 +8565,9 @@ msgstr ""
 msgid "Select how the satellite dish is set up. i.e. fixed dish, single LNB, DiSEqC switch, positioner, etc."
 msgstr ""
 
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr ""
+
 msgid "Select input device"
 msgstr "Välj inmatningsenhet"
 
@@ -10265,6 +10273,9 @@ msgstr ""
 msgid "The following files were found..."
 msgstr "Följande filer hittades..."
 
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr ""
+
 #
 msgid ""
 "The network wizard extension is not installed!\n"
@@ -10431,6 +10442,12 @@ msgstr "Detta DVD RW media är redan formaterat - om formatering kommer ta bort 
 
 #, python-format
 msgid "This field allows you to search an additional symbol rate up to %s."
+msgstr ""
+
+msgid ""
+"This image is intended for developers and testers.\n"
+"No support will be provided!\n"
+"Do you understand this?"
 msgstr ""
 
 msgid ""
@@ -10702,6 +10719,9 @@ msgstr "Tid"
 msgid "Time scale"
 msgstr "Tidskala"
 
+msgid "Time synchronization method"
+msgstr ""
+
 #
 #, fuzzy
 msgid "Time zone"
@@ -10917,6 +10937,11 @@ msgstr "Sändningstyp"
 
 #
 msgid "Transponder"
+msgstr "Transponder"
+
+#
+#, fuzzy
+msgid "Transponder Time"
 msgstr "Transponder"
 
 #
