--- a/po/tr.po
+++ b/po/tr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OPENPLi\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-01 09:56+0000\n"
+"POT-Creation-Date: 2021-02-17 20:18+0100\n"
 "PO-Revision-Date: 2015-12-18 21:05+0200\n"
 "Last-Translator: Yetkin AYDIN <yetkina@gmail.com>\n"
 "Language-Team: http://www.hurforum.com <yetkina@gmail.com>\n"
@@ -3973,10 +3973,6 @@ msgid "G"
 msgstr ""
 
 #, fuzzy
-msgid "GStreamer version: "
-msgstr "Çekirdek sürümü:"
-
-#, fuzzy
 msgid "GUI Settings"
 msgstr "Ayarlar"
 
@@ -4642,6 +4638,9 @@ msgstr "Dahili hafıza"
 msgid "Internal hdd only"
 msgstr "Yanlız dahili HDD"
 
+msgid "Internet (ntp)"
+msgstr ""
+
 msgid "Interval between keys when repeating:"
 msgstr "Tuş tekrarkama hızı:"
 
@@ -5126,6 +5125,13 @@ msgstr ""
 msgid "Media player"
 msgstr "Ortam Oynatıcı"
 
+#, fuzzy
+msgid "Media player: GStreamer, version "
+msgstr "Çekirdek sürümü:"
+
+msgid "Media player: ffmpeg, version "
+msgstr ""
+
 msgid "Media scanner"
 msgstr "Medya Tarama"
 
@@ -5406,6 +5412,9 @@ msgstr ""
 
 msgid "NOW"
 msgstr "ŞİMDİ"
+
+msgid "NTP Hostname"
+msgstr ""
 
 msgid "NTSC"
 msgstr "NTSC"
@@ -5717,10 +5726,6 @@ msgstr "Norveççe"
 #, fuzzy
 msgid "Not Installed"
 msgstr "Yükle"
-
-#, fuzzy
-msgid "Not Required"
-msgstr "Tanımlanmamış"
 
 msgid "Not associated"
 msgstr "İlişkili değil"
@@ -7610,6 +7615,9 @@ msgstr ""
 msgid "Select how the satellite dish is set up. i.e. fixed dish, single LNB, DiSEqC switch, positioner, etc."
 msgstr ""
 
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr ""
+
 msgid "Select input device"
 msgstr "Kumanda seç"
 
@@ -9152,6 +9160,9 @@ msgstr ""
 msgid "The following files were found..."
 msgstr "Aşağıdaki dosyalar bulundu..."
 
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr ""
+
 msgid ""
 "The network wizard extension is not installed!\n"
 "Please install it."
@@ -9283,6 +9294,12 @@ msgstr "DVD-RW medyası zaten biçimlendirilmiş - yeniden biçimlendirme tüm d
 
 #, python-format
 msgid "This field allows you to search an additional symbol rate up to %s."
+msgstr ""
+
+msgid ""
+"This image is intended for developers and testers.\n"
+"No support will be provided!\n"
+"Do you understand this?"
 msgstr ""
 
 msgid ""
@@ -9525,6 +9542,9 @@ msgstr "Zaman"
 msgid "Time scale"
 msgstr "Zaman cetveli"
 
+msgid "Time synchronization method"
+msgstr ""
+
 #, fuzzy
 msgid "Time zone"
 msgstr "Zaman dilimi"
@@ -9708,6 +9728,10 @@ msgid "Transmission mode"
 msgstr "İletim (transmisyon) modu"
 
 msgid "Transponder"
+msgstr "Geçerli transponder"
+
+#, fuzzy
+msgid "Transponder Time"
 msgstr "Geçerli transponder"
 
 #, fuzzy
