--- a/po/uk.po
+++ b/po/uk.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-01 09:56+0000\n"
+"POT-Creation-Date: 2021-02-17 20:18+0100\n"
 "PO-Revision-Date: 2016-11-17 12:51+0200\n"
 "Last-Translator: vovan43<vovan43@ex.ua>, sety <tim1065@mail.ru>, Irkoff <irkoff@gmail.com>\n"
 "Language-Team: gisclub.tv <http://gisclub.tv/>\n"
@@ -4004,10 +4004,6 @@ msgid "G"
 msgstr "G"
 
 #, fuzzy
-msgid "GStreamer version: "
-msgstr "Версія ядра: "
-
-#, fuzzy
 msgid "GUI Settings"
 msgstr "Налаштування"
 
@@ -4678,6 +4674,9 @@ msgstr "Внутрішня флеш"
 msgid "Internal hdd only"
 msgstr "Тільки внутр. жорсткий диск"
 
+msgid "Internet (ntp)"
+msgstr ""
+
 msgid "Interval between keys when repeating:"
 msgstr "Інтервал між повторами кнопок:"
 
@@ -5173,6 +5172,13 @@ msgstr ""
 msgid "Media player"
 msgstr "Медіаплеєр"
 
+#, fuzzy
+msgid "Media player: GStreamer, version "
+msgstr "Версія ядра: "
+
+msgid "Media player: ffmpeg, version "
+msgstr ""
+
 msgid "Media scanner"
 msgstr "Медіа сканнер"
 
@@ -5453,6 +5459,9 @@ msgstr "НІ"
 
 msgid "NOW"
 msgstr "ЗАРАЗ"
+
+msgid "NTP Hostname"
+msgstr ""
 
 msgid "NTSC"
 msgstr "NTSC"
@@ -5764,10 +5773,6 @@ msgstr "Норвезька"
 #, fuzzy
 msgid "Not Installed"
 msgstr "Встановити"
-
-#, fuzzy
-msgid "Not Required"
-msgstr "Не визначений"
 
 msgid "Not associated"
 msgstr "Немає асоціацій"
@@ -7668,6 +7673,9 @@ msgstr ""
 msgid "Select how the satellite dish is set up. i.e. fixed dish, single LNB, DiSEqC switch, positioner, etc."
 msgstr ""
 
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr ""
+
 msgid "Select input device"
 msgstr "Виберіть пристрої введення"
 
@@ -9206,6 +9214,9 @@ msgstr ""
 msgid "The following files were found..."
 msgstr "Наступні файли були знайдені ..."
 
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr ""
+
 msgid ""
 "The network wizard extension is not installed!\n"
 "Please install it."
@@ -9356,6 +9367,12 @@ msgstr "Цей DVD RW вже відформатований - переформа
 
 #, python-format
 msgid "This field allows you to search an additional symbol rate up to %s."
+msgstr ""
+
+msgid ""
+"This image is intended for developers and testers.\n"
+"No support will be provided!\n"
+"Do you understand this?"
 msgstr ""
 
 msgid ""
@@ -9610,6 +9627,9 @@ msgstr "Час"
 msgid "Time scale"
 msgstr "Тимчасовий масштаб сітки"
 
+msgid "Time synchronization method"
+msgstr ""
+
 #, fuzzy
 msgid "Time zone"
 msgstr "Часовий пояс"
@@ -9794,6 +9814,10 @@ msgid "Transmission mode"
 msgstr "Режим передачі"
 
 msgid "Transponder"
+msgstr "Транспондер"
+
+#, fuzzy
+msgid "Transponder Time"
 msgstr "Транспондер"
 
 msgid "Transport Stream Type"
