--- a/po/vi.po
+++ b/po/vi.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma 2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-01 09:56+0000\n"
+"POT-Creation-Date: 2021-02-17 20:18+0100\n"
 "PO-Revision-Date: 2019-11-19 08:58+0700\n"
 "Last-Translator: krong\n"
 "Language-Team: none\n"
@@ -3936,9 +3936,6 @@ msgstr "Tùy chọn khác"
 msgid "G"
 msgstr "G"
 
-msgid "GStreamer version: "
-msgstr "Phiên bản GStreamer: "
-
 msgid "GUI Settings"
 msgstr "Cài đặt GUI"
 
@@ -4590,6 +4587,9 @@ msgstr "Đèn flash bên trong"
 msgid "Internal hdd only"
 msgstr "Chỉ hdd nội bộ"
 
+msgid "Internet (ntp)"
+msgstr ""
+
 msgid "Interval between keys when repeating:"
 msgstr "Khoảng thời gian giữa các phím khi lặp lại:"
 
@@ -5067,6 +5067,13 @@ msgstr "Mayotte"
 msgid "Media player"
 msgstr "Phương tiện truyền thông"
 
+#, fuzzy
+msgid "Media player: GStreamer, version "
+msgstr "Phiên bản GStreamer: "
+
+msgid "Media player: ffmpeg, version "
+msgstr ""
+
 msgid "Media scanner"
 msgstr "Máy quét phương tiện truyền thông"
 
@@ -5347,6 +5354,9 @@ msgstr "KHÔNG"
 
 msgid "NOW"
 msgstr "HIỆN NAY"
+
+msgid "NTP Hostname"
+msgstr ""
 
 msgid "NTSC"
 msgstr "NTSC"
@@ -5651,9 +5661,6 @@ msgstr "Na Uy"
 
 msgid "Not Installed"
 msgstr "Chưa cài đặt"
-
-msgid "Not Required"
-msgstr "Không yêu cầu"
 
 msgid "Not associated"
 msgstr "Không liên quan"
@@ -7502,6 +7509,9 @@ msgstr "Chọn cách nhanh chóng các chảo nên di chuyển giữa các vệ 
 msgid "Select how the satellite dish is set up. i.e. fixed dish, single LNB, DiSEqC switch, positioner, etc."
 msgstr "Chọn cách thiết lập đĩa vệ tinh. tức là đĩa cố định, LNB đơn, công tắc DiSEqC, bộ định vị, v.v."
 
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr ""
+
 msgid "Select input device"
 msgstr "Chọn thiết bị đầu vào"
 
@@ -9010,6 +9020,9 @@ msgstr ""
 msgid "The following files were found..."
 msgstr "Các tập tin sau đã được tìm thấy ..."
 
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr ""
+
 msgid ""
 "The network wizard extension is not installed!\n"
 "Please install it."
@@ -9156,6 +9169,12 @@ msgstr "Phương tiện DVD RW này đã được định dạng - định dạn
 #, python-format
 msgid "This field allows you to search an additional symbol rate up to %s."
 msgstr "Trường này cho phép bạn tìm kiếm tỷ lệ biểu tượng bổ sung lên đến%s."
+
+msgid ""
+"This image is intended for developers and testers.\n"
+"No support will be provided!\n"
+"Do you understand this?"
+msgstr ""
 
 msgid ""
 "This info is for developers only.\n"
@@ -9388,6 +9407,9 @@ msgstr "Thời gian"
 msgid "Time scale"
 msgstr "Quy mô thời gian"
 
+msgid "Time synchronization method"
+msgstr ""
+
 #, fuzzy
 msgid "Time zone"
 msgstr "Múi giờ"
@@ -9572,6 +9594,10 @@ msgid "Transmission mode"
 msgstr "Chế độ truyền"
 
 msgid "Transponder"
+msgstr "Bộ tiếp sóng"
+
+#, fuzzy
+msgid "Transponder Time"
 msgstr "Bộ tiếp sóng"
 
 msgid "Transport Stream Type"
