--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLI Enigma2 Official Greek Translation\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-12-01 09:56+0000\n"
+"POT-Creation-Date: 2021-02-17 20:18+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: 344784320@qq.com\n"
 "Language-Team: Openpli Team\n"
@@ -3904,9 +3904,6 @@ msgstr "高级选项"
 msgid "G"
 msgstr ""
 
-msgid "GStreamer version: "
-msgstr "媒体框架版本: "
-
 msgid "GUI Settings"
 msgstr "GUI 设置"
 
@@ -4552,6 +4549,9 @@ msgstr "内部闪存"
 msgid "Internal hdd only"
 msgstr "仅内置硬盘"
 
+msgid "Internet (ntp)"
+msgstr ""
+
 msgid "Interval between keys when repeating:"
 msgstr "按键重复间隔。"
 
@@ -5031,6 +5031,13 @@ msgstr ""
 msgid "Media player"
 msgstr "媒体播放器"
 
+#, fuzzy
+msgid "Media player: GStreamer, version "
+msgstr "媒体框架版本: "
+
+msgid "Media player: ffmpeg, version "
+msgstr ""
+
 msgid "Media scanner"
 msgstr "媒体扫描器"
 
@@ -5298,6 +5305,9 @@ msgstr "否"
 
 msgid "NOW"
 msgstr "现在"
+
+msgid "NTP Hostname"
+msgstr ""
 
 msgid "NTSC"
 msgstr ""
@@ -5602,9 +5612,6 @@ msgstr "挪威语"
 
 msgid "Not Installed"
 msgstr "未安装"
-
-msgid "Not Required"
-msgstr "不需要"
 
 msgid "Not associated"
 msgstr "不关联"
@@ -7448,6 +7455,9 @@ msgstr "选择碟形天线在卫星之间移动的速度。"
 msgid "Select how the satellite dish is set up. i.e. fixed dish, single LNB, DiSEqC switch, positioner, etc."
 msgstr ""
 
+msgid "Select how you want your receiver to keep the correct time, either from the DVB transponder, or from the internet using NTP. Or use Auto, which will favour using NTP, but will fall back to transponder time when no internet connection is available."
+msgstr ""
+
 msgid "Select input device"
 msgstr "输入设备"
 
@@ -8950,6 +8960,9 @@ msgstr ""
 msgid "The following files were found..."
 msgstr "下列文件已找到。。。"
 
+msgid "The hostname or the IP address of the NTP server to synchronise the time with."
+msgstr ""
+
 msgid ""
 "The network wizard extension is not installed!\n"
 "Please install it."
@@ -9097,6 +9110,12 @@ msgstr "这张DVD RW已经格式化过，再次格式化将删除所有文件"
 #, python-format
 msgid "This field allows you to search an additional symbol rate up to %s."
 msgstr "此字段允许您搜索最多为 %s 的附加符号速率。"
+
+msgid ""
+"This image is intended for developers and testers.\n"
+"No support will be provided!\n"
+"Do you understand this?"
+msgstr ""
 
 msgid ""
 "This info is for developers only.\n"
@@ -9329,6 +9348,9 @@ msgstr "时间"
 msgid "Time scale"
 msgstr "时间跨度"
 
+msgid "Time synchronization method"
+msgstr ""
+
 msgid "Time zone"
 msgstr "时区"
 
@@ -9509,6 +9531,10 @@ msgid "Transmission mode"
 msgstr "传输模式"
 
 msgid "Transponder"
+msgstr "转发器"
+
+#, fuzzy
+msgid "Transponder Time"
 msgstr "转发器"
 
 msgid "Transport Stream Type"
